--- a/src/app/funds/balance/refill-money/refill-money.component.scss
+++ b/src/app/funds/balance/refill-money/refill-money.component.scss
@@ -1,3 +1,4 @@
+@import "../../../../assets/scss/variables";
 .modal__content{
   padding: 32px 12px;
 }
@@ -22,3 +23,4 @@
     padding: 32px;
   }
 }
+
