--- a/src/assets/scss/components/_select.scss
+++ b/src/assets/scss/components/_select.scss
@@ -108,15 +108,10 @@
     display: none;
     width: 100%;
     border: 1px solid $darker-white;
+    border-top: none;
     background-color: #fff;
     &--open {
-      position: absolute;
-      z-index: 5;
-      top: 100%;
       display: block;
-      width: 100%;
-      border: 1px solid $darker-white;
-      background-color: #fff;
     }
   }
   &__list-searching {
@@ -126,9 +121,14 @@
     //display: none;
     width: 100%;
     border: 1px solid $darker-blue;
+    border-top: none;
     background-color: #fff;
     &--open {
       display: block;
+    }
+    .select__list{
+      position: relative;
+      border: none;
     }
   }
   &__search {
