--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -393,6 +393,13 @@
     //    color: $light-blue;
     //  }
     //}
+    .title{
+      color:$dark-indigo;
+    }
+    .subtitle{
+      color:$dark-indigo;
+    }
+
     .steps {
       &__item {
         background-color: transparent;
