--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -164,6 +164,7 @@
         &:after {
           display: inline-block;
           margin-left: 4px;
+          margin-bottom: 4px;
           border-top: 4px solid rgba(255, 255, 255, 0.7);
           border-right: 4px solid transparent;
           border-left: 4px solid transparent;
