--- a/src/app/shared/components/dynamic-input/dynamic-input.component.scss
+++ b/src/app/shared/components/dynamic-input/dynamic-input.component.scss
@@ -57,6 +57,7 @@
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
+    padding-right: 23px;
   }
   &__triangle {
     position: absolute;
@@ -65,6 +66,7 @@
     border-top: 5px solid #6C738C;
     border-right: 5px solid transparent;
     border-left: 5px solid transparent;
+    pointer-events: none;
   }
   &__label{
     position: absolute;
