--- a/src/assets/scss/components/_datepicker.scss
+++ b/src/assets/scss/components/_datepicker.scss
@@ -6,8 +6,8 @@
   margin: 0 2.5px !important;
   padding: 0 12px;
   border: 1px solid #A0A0A0 !important;
-  border-bottom: none !important;
-  border-radius: 4px 4px 0 0!important;
+  // border-bottom: none !important;
+  border-radius: 4px!important;
   font-size: 14px;
 }
 
@@ -69,7 +69,7 @@
 .dark-theme{
   .mydp {
     border: 1px solid $light-blue !important;
-    border-bottom: none !important;
+    // border-bottom: none !important;
   }
   .mydp .selection {
     color:#fff !important;
