--- a/src/assets/scss/components/_select.scss
+++ b/src/assets/scss/components/_select.scss
@@ -30,9 +30,9 @@
     margin: 0 auto;
     padding: 0 12px;
     border: 1px solid $grey;
-    border-bottom: none;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    border-radius: 4px;
+    // border-top-left-radius: 4px;
+    // border-top-right-radius: 4px;
     font-size: 14px;
     line-height: 45px;
 
@@ -92,6 +92,7 @@
   &__line {
     height: 1px;
     background-color: $grey;
+    display: none;
   }
   &__triangle {
     position: absolute;
