--- a/src/assets/scss/pages/_transaction.scss
+++ b/src/assets/scss/pages/_transaction.scss
@@ -51,11 +51,12 @@
       position: relative;
       margin-top: 28px;
       align-items: center;
+      margin-bottom: 15px;
       &:after {
         content: '';
         display: block;
         position: absolute;
-        bottom: 0;
+        bottom: -15px;
         left: 0px;
         z-index: -1;
         width: 100%;
@@ -85,10 +86,10 @@
     &__search-btn {
       position: relative;
       padding: 0 12px;
-      -webkit-border-radius: 4px 4px 0 0 ;
-      -moz-border-radius: 4px 4px 0 0 ;
-      border-radius: 4px 4px 0 0 ;
-      bottom: -1px;
+      // -webkit-border-radius: 4px 4px 0 0 ;
+      // -moz-border-radius: 4px 4px 0 0 ;
+      border-radius: 4px;
+      bottom: 1px;
       svg{
         vertical-align: middle;
         fill:$light-blue;
