--- a/src/app/funds/transaction-history/transaction-history.component.scss
+++ b/src/app/funds/transaction-history/transaction-history.component.scss
@@ -10,6 +10,7 @@
     // border-bottom: none !important;
     overflow: unset !important;
     border-radius: 4px;
+    bottom:1px;
   }
   .ng-value-container {
     height: 100% !important;
