--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -1166,7 +1166,7 @@
       &__tabs{
         .tabs__item--active{
           &:after{
-            border-color: #2E3150 transparent transparent transparent;
+            border-color: #252543 transparent transparent transparent;
           }
         }
       }
