--- a/src/assets/scss/components/_radio.scss
+++ b/src/assets/scss/components/_radio.scss
@@ -74,6 +74,7 @@
         width: 2.85em;
         height: 1.7em;
         font-size: .7em;
+            padding-top: 1px;
         &:not(:last-child){
            margin-right: .2em;
         }
