--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -6,6 +6,24 @@
 
   /*--- modificators end ---*/
   /*--- elements start ---*/
+
+  .input-row{
+    margin-top: 17px;
+  }
+  &__trading-title{
+    font-size: 16px;
+  }
+  &__trading-title-wr{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+  &__trading-fee{
+    font-size: 12px;
+    color: #BFBFBF;
+    margin-bottom: 2px;
+    margin-right: 2px;
+  }
   &__header {
     position: relative;
     display: none;
@@ -13,6 +31,9 @@
     margin-bottom: 12px;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
+    &--trading{
+      margin-bottom: 7px;
+    }
     &--mob {
       display: flex;
       height: 44px;
@@ -139,6 +160,17 @@
   &__content {
     display: none;
     position: relative;
+    &--pg{
+      padding: 0 16px;
+      height: calc(100% - 30px);
+      .widget__trading-form{
+        margin: 0;
+        width: calc(50% - 7.5px);
+        max-width: 187px;
+        display: flex;
+        flex-direction: column;
+      }
+    }
     &--mob {
       display: block;
       //height: 100%;
@@ -442,9 +474,6 @@
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
   }
   &__chat-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     position: fixed;
     z-index: 2;
     bottom: 76px;
@@ -524,7 +553,7 @@
     margin-top: 24px;
   }
   &__trading-row-txt {
-    margin-top: 10px;
+    // margin-top: 10px;
     font-size: 14px;
     line-height: 16px;
     .type {
@@ -546,6 +575,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-end;
+
       &-title {
         margin-bottom: 4px;
       }
@@ -583,6 +613,7 @@
     font-size: 18px;
     line-height: 1;
     margin: 28px auto 0;
+    border-radius: 4px;
   }
   &__buy-sell-btn-wrap {
     display: flex;
@@ -730,9 +761,6 @@
       //box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
       box-shadow: none;
     }
-    &__search{
-      bottom: 16px;
-    }
     &__search-input {
       display: block;
       width: 100%;
@@ -816,6 +844,14 @@
     &__trading-form {
       display: block;
       margin: 0 24px;
+
+      &--wr{
+        display: flex;
+        justify-content: space-between;
+        padding-top: 31px;
+        height: calc(100% - 20px);
+        padding-bottom: 37px;
+      }
       &--mob {
         display: none;
       }
@@ -838,7 +874,7 @@
       margin-right: 8px;
     }
     &__trading-row {
-      margin-top: 24px;
+      margin-top: 13px;
     }
     &__trading-row-txt {
       font-size: 12px;
@@ -846,16 +882,16 @@
       .avaliable {
         flex-direction: row;
         align-items: center;
-        margin-top: 0;
+        margin-top: 11px;
       }
 
     }
     &__trading-btn {
       max-width: none;
-      height: 53px;
+      height: 48px;
       line-height: 1;
       font-size: 24px;
-      margin: 44px 0 0;
+      margin: auto 0 0;
       //background-color: #264F92;
       //border-color: rgba(35, 123, 239, 0.5);
       &:hover {
@@ -982,6 +1018,7 @@
       .dropdown__btn {
         color: #fff;
         &:before {
+          // display: none;
           background-image: url('assets/img/limit-order-white.svg');
         }
         &:after {
@@ -1011,7 +1048,7 @@
         }
       }
       .avaliable {
-        margin-top: 0;
+        margin-top: 12px;
         color: $light-blue;
         svg {
           fill: $light-blue;
@@ -1028,8 +1065,20 @@
     &__trading-btn {
       //background-color: #264F92;
       //border-color: rgba(35, 123, 239, 0.5);
+      &--buy{
+        background: #01B43E;
+        &:hover{
+          background: #00CA45;
+        }
+      }
+      &--sell{
+        background: #EB5757;
+        &:hover{
+          background: #EF4B4B;
+        }
+      }
       &:hover {
-        background-color: $darker-blue;
+        // background-color: $darker-blue;
         border-color: transparent;
       }
 
@@ -1144,6 +1193,18 @@
             }
           }
         }
+      }
+      .wrap-input__currency{
+        position: absolute;
+        top: 2px;
+        bottom: 0;
+        right: 14px;
+        margin: auto;
+        display: flex;
+        align-items: center;
+        pointer-events: none;
+        text-transform: uppercase;
+        min-width: 35px;
       }
       .wrap-input__input {
         &:not([value=""]) {
