--- a/src/app/dashboard/components/trading/trading.component.scss
+++ b/src/app/dashboard/components/trading/trading.component.scss
@@ -1,7 +1,13 @@
 :host {
   width: 100%;
 }
-
+.radio__input:checked{
+  &+.radio__text{
+    background-color: #237BEF;
+    color: #fff;
+    border-color: transparent;
+  }
+}
 .dropdown__btn:after {
   position: absolute;
   top: 40%;
@@ -49,3 +55,84 @@
     left: 21px;
   }
 }
+
+.avaliable--aifl{
+  align-items: flex-start;
+  span{
+    color: #BFBFBF;
+    margin-right: 3px;
+  }
+}
+
+.no-line{
+  input{
+    border: 1px solid #94C2FF;
+    border-radius: 4px;
+    width: 100%;
+  }
+}
+
+.row__percent{
+  margin-top: 19px;
+  @media(min-width:1500px){
+    font-size: 20px;
+  }
+  font-size: calc(.64rem + .63vw);
+  justify-content: space-between;
+}
+
+.d-none {
+  display: none;
+}
+
+//:host {
+//  width: 100%;
+//}
+//
+//.dropdown__btn:after {
+//  position: absolute;
+//  top: 40%;
+//  right: 0;
+//  display: inline-block;
+//  content: "";
+//  vertical-align: middle;
+//  border-top: 0px solid #fff;
+//  border-right: 0px solid transparent;
+//  border-left: 0px solid transparent;
+//}
+//
+//.widget__header {
+//  background-color: transparent;
+//}
+//
+//.tab-no-active {
+//  border-bottom: 2px solid transparent;
+//}
+//
+//.dropdown__item {
+//  white-space: nowrap;
+//}
+//
+//.dropdown__list {
+//  left: 0;
+//  right: auto;
+//}
+//
+//.widget__tabs {
+//  margin-bottom: 12px;
+//  @media (min-width: 1200px) {
+//    margin-bottom: 0;
+//  }
+//}
+//
+//.no-spinners::-webkit-inner-spin-button,
+//.no-spinners::-webkit-outer-spin-button {
+//  -webkit-appearance: none;
+//  margin: 0;
+//}
+//
+//@media (min-width: 1200px) {
+//  .dropdown__list {
+//    left: 21px;
+//  }
+//}
