--- a/src/app/shared/components/price-input/price-input.component.html
+++ b/src/app/shared/components/price-input/price-input.component.html
@@ -2,6 +2,7 @@
        class="wrap-input__input"
        [(ngModel)]='value'
        [class.dirty]="price.dirty"
+       [ngClass]="{'wrap-input__input--small': forTrading}"
        type="text"
        #price="ngModel"
        name="price"
@@ -12,4 +13,5 @@
        (focus)="onFocus()"
       >
 <label class="wrap-input__label" for="">{{placeholder}}</label>
-<div class="wrap-input__line"></div>
+<label class="wrap-input__currency" for="" *ngIf="forTrading">{{currencyLabel}}</label>
+<div class="wrap-input__line" *ngIf="!forTrading"></div>
