added custom input for balances, pending requests and open orders

--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -23,29 +23,22 @@
   <!--filters start-->
   <form action="">
     <div class="balance__filters">
-
-
-      <!--<div class="wrap-input wrap-input&#45;&#45;with-icon balance__search-mob">-->
-        <!--<ng-select-->
-          <!--class="custom"-->
-          <!--[items]="currTab === Tab.CRYPTO ? cryptoCurrenciesForChoose : fiatCurrenciesForChoose"-->
-          <!--bindLabel="name"-->
-          <!--placeholder="Search"-->
-          <!--bindValue="name"-->
-          <!--name="currency"-->
-          <!--[(ngModel)]="currencyForChoose"-->
-          <!--(ngModelChange)="filterByCurrencyForMobile.emit({currTab: this.currTab, currency: this.currencyForChoose})"-->
-        <!--&gt;</ng-select>-->
-        <!--<div class="wrap-input__line"></div>-->
-      <!--</div>-->
-
-      <app-custom-search-input
-        style="width: 90px; margin-right: 10px;"
-        class="wrap-input wrap-input--with-icon balance__search"
-        [coins]="currTab === Tab.CRYPTO ? cryptoCurrenciesForChoose : fiatCurrenciesForChoose"
-        (selectedCoin)="onSearchCoin($event)"
-      >
-      </app-custom-search-input>
+      <ng-container [ngSwitch]="currTab">
+        <app-dynamic-input
+          *ngSwitchCase="Tab.CRYPTO"
+          [value]="currValue"
+          [options]="cryptoCurrenciesForChoose && getCryptoDynamicIData"
+          (onChange)="onChangeCurrPair($event)"
+          (onSelect)="onSearchCoin($event.id)"
+        ></app-dynamic-input>
+        <app-dynamic-input
+          *ngSwitchCase="Tab.FIAT"
+          [value]="currValue"
+          [options]="fiatCurrenciesForChoose && getFiatDynamicIData"
+          (onChange)="onChangeCurrPair($event)"
+          (onSelect)="onSearchCoin($event.id)"
+        ></app-dynamic-input>
+      </ng-container>
 
       <span>{{'Price in' | translate}}</span>
       <div class="dropdown" #dropdown (click)="onToggleDropdown()">
