--- a/src/app/shared/components/dynamic-input/dynamic-input.component.html
+++ b/src/app/shared/components/dynamic-input/dynamic-input.component.html
@@ -1,29 +1,36 @@
-<div class="dynamic-input" [class.dynamic-input--open]="showDropdown">
-  <div class="dynamic-input__wrap">
+<div>
+  <div class="wrap-input pair-popup__input" style="width: 100%;">
     <input
       #input
       id="DIInput"
-      class="dynamic-input__input"
+      class="wrap-input__input"
       name="item"
       [(ngModel)]="value"
-      (input)="onChange.emit($event.target.value)"
+      (input)="onChangeFn($event)"
       (focus)="openDropdown()"
+      (keydown)="preventEventInput($event)"
+      (keyup)="preventEventInput($event)"
       type="text"
       required
     >
-    <div class="dynamic-input__triangle"></div>
-    <span class="dynamic-input__label">Search</span>
+    <label class="wrap-input__label" for="">Search</label>
+    <div class="wrap-input__icon">
+      <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"/>
+      </svg>
+    </div>
+    <!-- <div class="wrap-input__line"></div> -->
   </div>
 
   <!--<div class="wrap-input__icon" *ngIf="icon" [innerHTML]="icon"></div>-->
-  <div class="dynamic-input__list dropdown search" [class.dropdown--open]="showDropdown">
-    <ul class="dropdown__list">
-      <perfect-scrollbar style="max-height: 285px;">
+  <div>
+    <ul class="select__list" [ngClass]="{'select__list--open': showDropdown}">
+      <perfect-scrollbar>
         <li
           *ngFor="let item of filteredOptions; let i = index"
           (click)="onSelectItem(item)"
-          class="dropdown__item"
-          [class.active]="i == arrowKeyLocation"
+          class="select__list-item hover-coin"
+          [class.active]="i === arrowKeyLocation"
         >
           {{item.text}}
         </li>
