--- a/src/assets/scss/components/_input.scss
+++ b/src/assets/scss/components/_input.scss
@@ -162,6 +162,7 @@
     text-align: left;
     font-size: 12px;
     line-height: 14px;
+    position: absolute;
 
     &--show {
       display: block;
@@ -177,7 +178,7 @@
   &__input {
     display: block;
     box-sizing: border-box;
-    width: calc(100% - 5px);
+    width: 100%;
     height: 36px;
     margin: 0 auto;
     padding: 0 12px;
