--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -684,7 +684,8 @@
     &__header {
       display: flex;
       align-items: center;
-      cursor: pointer;
+      cursor: grabbing;
+      // -webkit-cursor: grabbing;
       &--mob {
         display: none;
       }
@@ -927,7 +928,12 @@
     background-color: $dark-indigo;
     /*--- elements start ---*/
     &__header {
+      background-color: #252543;
+      transition: .3s;
+      &:hover{
+
       background-color: #3A3D5B;
+      }
     }
     &__name {
       color: $grey;
@@ -1145,13 +1151,10 @@
   .dark-theme {
     .widget {
       &--graph-color {
-        background-color: #2c375d;
+        background-color: #252543;
       }
       &--gradient {
-        background: -webkit-gradient(linear, left top, left bottom, from(rgb(48, 49, 77)), to(rgb(24, 52, 103)));
-        background: -webkit-linear-gradient(top, rgb(48, 49, 77) 0%, rgb(24, 52, 103) 100%);
-        background: -o-linear-gradient(top, rgb(48, 49, 77) 0%, rgb(24, 52, 103) 100%);
-        background: linear-gradient(to bottom, rgb(48, 49, 77) 0%, rgb(24, 52, 103) 100%);
+
         background: #252543;
       }
       &__header {
