--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -71,7 +71,7 @@
         </div>
       </li>
       <li class="menu__item" routerLinkActive="menu__link--active">
-        <a class="menu__link" href="https://exrates.me/dashboard">
+        <a class="menu__link" href="https://twitter.com/Exrates_Me" target="blank">
           <span class="menu__link-text">{{'News' | translate}}</span>
         </a>
       </li>
@@ -232,7 +232,7 @@
         </li>
         <li class="menu__item">
           <a class="menu__link menu__link--auth--reg" (click)="openRegistration()">
-            <span class="menu__link-text">{{'Sign In' | translate}}</span>
+            <span class="menu__link-text">{{'Register' | translate}}</span>
           </a>
         </li>
       </ng-template>
@@ -555,7 +555,7 @@
         <!--<a class="menu-mob__link" (click)="mobileLinkClick()" routerLink="/referral-charges">Referral charges</a>-->
         <!--</div>-->
         <!--</div>-->
-        <a class="menu-mob__link" href="https://exrates.me/dashboard"><img class="menu-mob__link-icon" src="../../assets/img/newspaper.svg"><span
+        <a class="menu-mob__link" href="https://twitter.com/Exrates_Me" target="blank"><img class="menu-mob__link-icon" src="../../assets/img/newspaper.svg"><span
           class="menu-mob__link-text">{{'News' | translate}}</span></a>
       </nav>
     </div>
