--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -151,7 +151,7 @@
 
 
     <ng-template #emailInputTemplate>
-      <h6 class="popup__title">{{'Registration' | translate}}</h6>
+      <h6 class="popup__title">{{'Register' | translate}}</h6>
       <!--<h4 class="popup__subtitle">{{emailMessage}}</h4>-->
       <form class="popup__form" [formGroup]="emailForm">
         <div >
