--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -197,8 +197,8 @@
       </form>
 
       <div class="popup__links-wrap">
-        <input id="agreeTerms" type="checkbox" [(ngModel)]="agreeTerms">
-        <label for="agreeTerms">{{'By registering you agree with' | translate}}</label>
+        <input id="agreeTerms" class="d-none" type="checkbox" checked="checked" [(ngModel)]="agreeTerms">
+        <div class="agree-terms"><span class="accept-icon"><img src="../../assets/img/checkbox.svg" alt=""></span>{{'By registering you agree with' | translate}}</div>
         <a class="popup__link" >{{'Terms of Use' | translate}}</a>
       </div>
       <div class="popup__links-wrap popup__links-wrap--hidden-mob">
