--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -42,6 +42,7 @@
 @import "components/filters-popup";
 @import "components/scroll";
 @import "components/revoke-request";
+@import "components/_service-style";
 
 //@import "components/footer";
 @import "components/modal";
