off autocomplete in dropdown & DEVEX1001

--- a/src/assets/scss/components/_sidebar-menu.scss
+++ b/src/assets/scss/components/_sidebar-menu.scss
@@ -65,7 +65,7 @@
 
       &--active {
         color: $darker-blue;
-        background-color: $light-aqua;
+        background: linear-gradient(90deg, #21417D 1.75%, #191A39 100%);
 
         &:before {
           position: absolute;
